Fix horizontal overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,7 @@ body {
 
 .promoteNowText {
 	color: #191414;
-	font-size: 70px;
+	font-size: 50px;
 	line-height: 65px;
 	font-weight: 600;
 	text-align: center;
